add the about page

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,1 +1,7 @@
 index.main.callout=Bootstrap starter template
+navbar.home.text=Home
+navbar.about.text=About
+
+copy.h1.text=Who we are
+copy.p.lead=We are a community of DevOps engineers who has the goal of helping organisations deliver business value \
+  faster, through technology, while having fun 
