--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,7 +1,17 @@
 index.main.callout=Bootstrap starter template
 navbar.home.text=Home
 navbar.about.text=About
+navbar.contact.text=Contact Us
 
 copy.h1.text=Who we are
 copy.p.lead=We are a community of DevOps engineers who has the goal of helping organisations deliver business value \
   faster, through technology, while having fun 
+
+
+contact.h1.text=We Value Your Feedback
+contact.p.lead=Please let us know what you think
+form.email=email
+form.firstname=First Name
+form.lastname=Last Name
+form.feedback.form.text=Your Feedback
+form.submit=Submit
