--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -15,3 +15,8 @@ form.firstname=First Name
 form.lastname=Last Name
 form.feedback.form.text=Your Feedback
 form.submit=Submit
+navbar.login.text=Log In
+login.h1.text=Please Sign In
+login.p.lead=Please Sign In To Access
+login.username.text=Username
+login.password.text=Password
