--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -20,3 +20,6 @@ login.h1.text=Please Sign In
 login.p.lead=Please Sign In To Access
 login.username.text=Username
 login.password.text=Password
+
+payload.h1.text=You've got the juice!
+payload.p.lead=If you can see this page it means you are logged in
