--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -16,6 +16,7 @@ form.lastname=Last Name
 form.feedback.form.text=Your Feedback
 form.submit=Submit
 navbar.login.text=Log In
+navbar.logout.text=Log Out
 login.h1.text=Please Sign In
 login.p.lead=Please Sign In To Access
 login.username.text=Username
@@ -23,3 +24,5 @@ login.password.text=Password
 
 payload.h1.text=You've got the juice!
 payload.p.lead=If you can see this page it means you are logged in
+login.error.message=An Error Occured While Logged In
+login.logout.success=You've Successfully Logged Out
